# rustmonit

./: .env  Cargo.toml  README.md
migration/: 202405160001_create_metrics_table.sql
proto/: monitor.proto
server/: main.rs
src/: main.rs
